tweet stream connects, but doesn't filter properly

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
         "accessToken":"",
         "accessTokenSecret":""
     },
-    "userId":"",
+    "allowedUsers":[],
     "hashtags": {
         "lock": "lock",
         "unlock":"unlock"
