updated config, added print readouts

--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     },
     "allowedUsers":[],
     "hashtags": {
-        "lock": "lock",
-        "unlock":"unlock"
+        "lock": "#lock",
+        "unlock":"#unlock",
+        "toggle":"#toggle"
     }
 }
